--- a/scss/componentes/_pasos.scss
+++ b/scss/componentes/_pasos.scss
@@ -1,28 +1,29 @@
 #pasos {
 
-    background-color: $rosaOscuro;
-    @include espacios (0, 100px);
+    background-color: $negro;
+    @include espacios (0, 50px 0);
     
     div {
         @include sticky (7%);
         padding: 60px 0;
-        background-color: $rosaOscuro;
-        height: 100vh;
-        width: 850px;
+        background-color: $negro;
+        margin: 0 auto;
+
+        p {
+            text-align: center;
+        }
 
         .title {
-            word-wrap: break-word;
-            width: 850px;
-            font-size: 200px ;
-            font-weight: 900;
-            line-height: 150px;
-            color: $rosaOscuro2;
-            background-color: $rosaOscuro;
+            font-family: 'Cabin', sans-serif;
+            font-size: 60px ;
+            font-weight: 600;
+            color: $rosaOscuro;
         }
 
         .explicacion{
+            font-family: 'Cabin', sans-serif;
             color: white;
-            max-width: 70%;
+            font-weight: 700;
             
             span {
                 font-weight: 800;
