--- a/scss/componentes/footer-pags/_privacidad.scss
+++ b/scss/componentes/footer-pags/_privacidad.scss
@@ -1,16 +1,16 @@
 .privBody {
 
-
+    background-color: $amarillo;
     .politica-priv {
         width: 500px;
         font-size: 20px;
         margin: 50px auto;
 
         h2 {
+            margin: 100px 0 30px 0 ;
             font-weight: 900;
-            color: rgb(0, 187, 140);
+            color: $negro;
             font-size: 50px;
-            margin-bottom: 30px;
         }
 
         p {
@@ -21,9 +21,29 @@
 
             span {
                 font-size: $size *3.5;
-                color: rgb(0, 187, 140);
+                color: $negro;
             }
         }   
+    }
+
+
+    header {
+        .botones .botonHeader {
+            @include boton ($negro, white);
+
+        }
+    }
+
+    footer {
+        background-color: $negro;
+
+        .mandar {
+            color: $negro !important;
+
+            &:hover {
+                color: white !important;
+            }
+        }
     }
 }
 
