--- a/scss/style.css
+++ b/scss/style.css
@@ -1,8 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,400;0,500;0,800;0,900;1,800&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
+@charset "UTF-8";
+/*font-family: 'Cabin', sans-serif; (textos)
+font-family: 'Montserrat', sans-serif; (negrita 1)
+font-family: 'Raleway', sans-serif (negrita 2)*/
+@import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,400;0,500;0,800;0,900;1,800&display=swap");
 * {
   margin: 0px;
   padding: 0px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', sans-serif;
   scroll-behavior: smooth;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -81,18 +85,27 @@
 }
 
 #pasos {
+  padding: 20px 0;
   background-color: #000f33;
-  margin: 0;
-  padding: 50px 0;
 }
 
 #pasos div {
   position: -webkit-sticky;
   position: sticky;
-  top: 7%;
-  padding: 60px 0;
+  top: 2%;
+  padding: 20px 0;
   background-color: #000f33;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #pasos div p {
@@ -114,6 +127,20 @@
 
 #pasos div .explicacion span {
   font-weight: 800;
+}
+
+#pasos div video {
+  -webkit-box-shadow: 0px 0px 50px white;
+          box-shadow: 0px 0px 50px white;
+  border-radius: 30px;
+  bottom: 0px;
+  margin: 0 auto;
+  width: 60%;
+  height: auto;
+}
+
+#pasos div video source {
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 961px) {
@@ -803,14 +830,6 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   background-color: white;
 }
 
-.light header .buscadorG input {
-  background-color: #e9e9e9;
-}
-
-.light header .buscadorG button svg {
-  fill: #201f23;
-}
-
 .light .grupos-pag .opcionesGrupos li a {
   color: #353535;
 }
@@ -827,8 +846,20 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   display: inline;
 }
 
+.light .grupos-pag .grupos .buscadorG input {
+  border: 0.6px solid #a1a1a1;
+}
+
+.light .grupos-pag .grupos .buscadorG button svg {
+  fill: #201f23;
+}
+
 .light .grupos-pag .grupos p {
   color: #4b4b4b;
+}
+
+.light .grupos-pag .grupos .nuevoGrupo {
+  background-color: #f1f1f1;
 }
 
 .light .grupos-pag .perfil svg, .light .grupos-pag .perfil .nombreUsuario {
@@ -845,14 +876,38 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
           filter: contrast(0.3);
 }
 
+.light .añadirGrupo .contentCrearGrupo {
+  background-color: white;
+}
+
+.light .añadirGrupo .contentCrearGrupo h3 {
+  color: #000f33;
+}
+
+.light .añadirGrupo .contentCrearGrupo input {
+  background-color: white;
+  border: #bdbdbd solid 0.5px;
+}
+
+.light .añadirGrupo .contentCrearGrupo button {
+  background-color: #E04DB0;
+  color: white;
+  border: 1px solid #E04DB0;
+}
+
+.light .añadirGrupo .contentCrearGrupo button:hover {
+  background: none;
+  color: #E04DB0;
+}
+
+.dark {
+  background-color: #201f23;
+}
+
 .dark header {
   border-right: 1px solid white;
   background-color: #1b1b1b;
   color: white;
-}
-
-.dark header .buscadorG input {
-  background-color: #ffffff;
 }
 
 .dark header .perfil svg {
@@ -867,10 +922,6 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 .dark header .perfil .perfil-options {
   -webkit-filter: drop-shadow(0px 0px 0px white);
           filter: drop-shadow(0px 0px 0px white);
-}
-
-.dark .grupos-pag {
-  background-color: #201f23;
 }
 
 .dark .grupos-pag .opcionesGrupos {
@@ -889,8 +940,47 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   display: none;
 }
 
+.dark .grupos-pag .grupos .nuevoGrupo {
+  background-color: rgba(128, 128, 128, 0.377);
+}
+
 .dark .grupos-pag .grupos p {
   color: white;
+}
+
+.dark .grupos-pag .grupos .buscadorG input {
+  background-color: #1b1b1b;
+  border: 0.5px solid white;
+  color: white;
+}
+
+.dark .añadirGrupo .contentCrearGrupo {
+  background-color: #1b1b1b;
+}
+
+.dark .añadirGrupo .contentCrearGrupo h3, .dark .añadirGrupo .contentCrearGrupo h6 {
+  color: white;
+}
+
+.dark .añadirGrupo .contentCrearGrupo input {
+  background-color: #201f23;
+  border: white solid 0.5px;
+  color: white;
+}
+
+.dark .añadirGrupo .contentCrearGrupo button {
+  background-color: #E04DB0;
+  color: #1b1b1b;
+  border: 1px solid #E04DB0;
+}
+
+.dark .añadirGrupo .contentCrearGrupo button:hover {
+  background: none;
+  color: #E04DB0;
+}
+
+.dark .añadirGrupo .contentCrearGrupo svg {
+  fill: white;
 }
 
 #gruposBody header {
@@ -942,6 +1032,7 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 }
 
 #gruposBody header .perfil .perfil-options {
+  z-index: 3;
   position: absolute;
   top: 70px;
   right: 20px;
@@ -980,7 +1071,18 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   display: inline-block;
 }
 
-#gruposBody header .buscadorG {
+#gruposBody .grupos-pag {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 200px 80%;
+      grid-template-columns: 200px 80%;
+}
+
+#gruposBody .grupos-pag .grupos {
+  margin: 50px 100px;
+}
+
+#gruposBody .grupos-pag .grupos .buscadorG {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -989,39 +1091,96 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
           align-items: center;
 }
 
-#gruposBody header .buscadorG input {
-  margin: 0 0 0 20px;
+#gruposBody .grupos-pag .grupos .buscadorG input {
   padding: 0 10px;
-  border: none;
-  border-radius: 10px;
+  border-radius: 5px;
   outline: none;
   width: 300px;
-  height: 30px;
+  height: 40px;
 }
 
-#gruposBody header .buscadorG button {
+#gruposBody .grupos-pag .grupos .buscadorG button {
   border: none;
   width: 30px;
   height: 30px;
   background: none;
 }
 
-#gruposBody header .buscadorG button:hover {
+#gruposBody .grupos-pag .grupos .buscadorG button:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
 
-#gruposBody .grupos-pag {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 200px auto;
-      grid-template-columns: 200px auto;
+#gruposBody .grupos-pag .grupos #allGroups {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-#gruposBody .grupos-pag .grupos .aviso {
+#gruposBody .grupos-pag .grupos #allGroups .grupoInfo {
+  margin-right: 30px;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoInfo h6 {
+  margin: 10px;
   text-align: center;
-  margin: 300px auto;
-  font-weight: 500;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .nuevoGrupo {
+  margin-right: 30px;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .nuevoGrupo svg {
+  fill: #E04DB0;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .nuevoGrupo:hover svg {
+  -webkit-transform: scale(0.7);
+          transform: scale(0.7);
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG {
+  background-color: gray;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG, #gruposBody .grupos-pag .grupos #allGroups .nuevoGrupo {
+  margin-top: 30px;
+  width: 200px;
+  height: 200px;
+  border-radius: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG:hover, #gruposBody .grupos-pag .grupos #allGroups .nuevoGrupo:hover {
+  -webkit-box-shadow: 0px 0px 20px rgba(128, 128, 128, 0.281);
+          box-shadow: 0px 0px 20px rgba(128, 128, 128, 0.281);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 #gruposBody .grupos-pag .opcionesGrupos {
@@ -1054,16 +1213,75 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   text-decoration: none;
 }
 
-#gruposBody .grupos-pag .opcionesGrupos .crearGrupo {
-  margin: auto 0 0 20px;
-  display: inline;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
+#gruposBody .añadirGrupo {
+  background-color: #5e5e5e48;
+  position: absolute;
+  width: 100%;
+  height: 92%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: none;
 }
 
-#gruposBody .grupos-pag .opcionesGrupos .crearGrupo:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+#gruposBody .añadirGrupo .contentCrearGrupo {
+  display: inline-block;
+  width: auto;
+  height: 450px;
+  border-radius: 30px;
+}
+
+#gruposBody .añadirGrupo .contentCrearGrupo svg {
+  display: inline;
+  margin: 30px 0 0 30px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+#gruposBody .añadirGrupo .contentCrearGrupo svg:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
+}
+
+#gruposBody .añadirGrupo .contentCrearGrupo h3 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+}
+
+#gruposBody .añadirGrupo .contentCrearGrupo input {
+  width: 300px;
+  height: 40px;
+  border-radius: 2px;
+  padding-left: 10px;
+  outline: none;
+  margin-bottom: 20px;
+}
+
+#gruposBody .añadirGrupo .contentCrearGrupo button {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  width: 100px;
+  height: 40px;
+}
+
+#gruposBody .añadirGrupo .contentCrearGrupo .formCrearGrupo {
+  padding: 60px 100px;
+}
+
+#gruposBody .displayGrupos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .is {
@@ -1462,14 +1680,6 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   background-color: white;
 }
 
-.light header .buscadorG input {
-  background-color: #e9e9e9;
-}
-
-.light header .buscadorG button svg {
-  fill: #201f23;
-}
-
 .light .grupos-pag .opcionesGrupos li a {
   color: #353535;
 }
@@ -1486,8 +1696,20 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   display: inline;
 }
 
+.light .grupos-pag .grupos .buscadorG input {
+  border: 0.6px solid #a1a1a1;
+}
+
+.light .grupos-pag .grupos .buscadorG button svg {
+  fill: #201f23;
+}
+
 .light .grupos-pag .grupos p {
   color: #4b4b4b;
+}
+
+.light .grupos-pag .grupos .nuevoGrupo {
+  background-color: #f1f1f1;
 }
 
 .light .grupos-pag .perfil svg, .light .grupos-pag .perfil .nombreUsuario {
@@ -1504,14 +1726,38 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
           filter: contrast(0.3);
 }
 
+.light .añadirGrupo .contentCrearGrupo {
+  background-color: white;
+}
+
+.light .añadirGrupo .contentCrearGrupo h3 {
+  color: #000f33;
+}
+
+.light .añadirGrupo .contentCrearGrupo input {
+  background-color: white;
+  border: #bdbdbd solid 0.5px;
+}
+
+.light .añadirGrupo .contentCrearGrupo button {
+  background-color: #E04DB0;
+  color: white;
+  border: 1px solid #E04DB0;
+}
+
+.light .añadirGrupo .contentCrearGrupo button:hover {
+  background: none;
+  color: #E04DB0;
+}
+
+.dark {
+  background-color: #201f23;
+}
+
 .dark header {
   border-right: 1px solid white;
   background-color: #1b1b1b;
   color: white;
-}
-
-.dark header .buscadorG input {
-  background-color: #ffffff;
 }
 
 .dark header .perfil svg {
@@ -1526,10 +1772,6 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 .dark header .perfil .perfil-options {
   -webkit-filter: drop-shadow(0px 0px 0px white);
           filter: drop-shadow(0px 0px 0px white);
-}
-
-.dark .grupos-pag {
-  background-color: #201f23;
 }
 
 .dark .grupos-pag .opcionesGrupos {
@@ -1548,8 +1790,47 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   display: none;
 }
 
+.dark .grupos-pag .grupos .nuevoGrupo {
+  background-color: rgba(128, 128, 128, 0.377);
+}
+
 .dark .grupos-pag .grupos p {
   color: white;
+}
+
+.dark .grupos-pag .grupos .buscadorG input {
+  background-color: #1b1b1b;
+  border: 0.5px solid white;
+  color: white;
+}
+
+.dark .añadirGrupo .contentCrearGrupo {
+  background-color: #1b1b1b;
+}
+
+.dark .añadirGrupo .contentCrearGrupo h3, .dark .añadirGrupo .contentCrearGrupo h6 {
+  color: white;
+}
+
+.dark .añadirGrupo .contentCrearGrupo input {
+  background-color: #201f23;
+  border: white solid 0.5px;
+  color: white;
+}
+
+.dark .añadirGrupo .contentCrearGrupo button {
+  background-color: #E04DB0;
+  color: #1b1b1b;
+  border: 1px solid #E04DB0;
+}
+
+.dark .añadirGrupo .contentCrearGrupo button:hover {
+  background: none;
+  color: #E04DB0;
+}
+
+.dark .añadirGrupo .contentCrearGrupo svg {
+  fill: white;
 }
 
 #gruposBody header {
@@ -1601,6 +1882,7 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
 }
 
 #gruposBody header .perfil .perfil-options {
+  z-index: 3;
   position: absolute;
   top: 70px;
   right: 20px;
@@ -1639,7 +1921,18 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   display: inline-block;
 }
 
-#gruposBody header .buscadorG {
+#gruposBody .grupos-pag {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 200px 80%;
+      grid-template-columns: 200px 80%;
+}
+
+#gruposBody .grupos-pag .grupos {
+  margin: 50px 100px;
+}
+
+#gruposBody .grupos-pag .grupos .buscadorG {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1648,39 +1941,96 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
           align-items: center;
 }
 
-#gruposBody header .buscadorG input {
-  margin: 0 0 0 20px;
+#gruposBody .grupos-pag .grupos .buscadorG input {
   padding: 0 10px;
-  border: none;
-  border-radius: 10px;
+  border-radius: 5px;
   outline: none;
   width: 300px;
-  height: 30px;
+  height: 40px;
 }
 
-#gruposBody header .buscadorG button {
+#gruposBody .grupos-pag .grupos .buscadorG button {
   border: none;
   width: 30px;
   height: 30px;
   background: none;
 }
 
-#gruposBody header .buscadorG button:hover {
+#gruposBody .grupos-pag .grupos .buscadorG button:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
 
-#gruposBody .grupos-pag {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 200px auto;
-      grid-template-columns: 200px auto;
+#gruposBody .grupos-pag .grupos #allGroups {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-#gruposBody .grupos-pag .grupos .aviso {
+#gruposBody .grupos-pag .grupos #allGroups .grupoInfo {
+  margin-right: 30px;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoInfo h6 {
+  margin: 10px;
   text-align: center;
-  margin: 300px auto;
-  font-weight: 500;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .nuevoGrupo {
+  margin-right: 30px;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .nuevoGrupo svg {
+  fill: #E04DB0;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .nuevoGrupo:hover svg {
+  -webkit-transform: scale(0.7);
+          transform: scale(0.7);
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG {
+  background-color: gray;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG, #gruposBody .grupos-pag .grupos #allGroups .nuevoGrupo {
+  margin-top: 30px;
+  width: 200px;
+  height: 200px;
+  border-radius: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+#gruposBody .grupos-pag .grupos #allGroups .grupoIMG:hover, #gruposBody .grupos-pag .grupos #allGroups .nuevoGrupo:hover {
+  -webkit-box-shadow: 0px 0px 20px rgba(128, 128, 128, 0.281);
+          box-shadow: 0px 0px 20px rgba(128, 128, 128, 0.281);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 #gruposBody .grupos-pag .opcionesGrupos {
@@ -1713,15 +2063,74 @@ footer .pagsTexts .texts h5, footer .pagsTexts .redes h5 {
   text-decoration: none;
 }
 
-#gruposBody .grupos-pag .opcionesGrupos .crearGrupo {
-  margin: auto 0 0 20px;
-  display: inline;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
+#gruposBody .añadirGrupo {
+  background-color: #5e5e5e48;
+  position: absolute;
+  width: 100%;
+  height: 92%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: none;
 }
 
-#gruposBody .grupos-pag .opcionesGrupos .crearGrupo:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+#gruposBody .añadirGrupo .contentCrearGrupo {
+  display: inline-block;
+  width: auto;
+  height: 450px;
+  border-radius: 30px;
+}
+
+#gruposBody .añadirGrupo .contentCrearGrupo svg {
+  display: inline;
+  margin: 30px 0 0 30px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+#gruposBody .añadirGrupo .contentCrearGrupo svg:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
+}
+
+#gruposBody .añadirGrupo .contentCrearGrupo h3 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+}
+
+#gruposBody .añadirGrupo .contentCrearGrupo input {
+  width: 300px;
+  height: 40px;
+  border-radius: 2px;
+  padding-left: 10px;
+  outline: none;
+  margin-bottom: 20px;
+}
+
+#gruposBody .añadirGrupo .contentCrearGrupo button {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  width: 100px;
+  height: 40px;
+}
+
+#gruposBody .añadirGrupo .contentCrearGrupo .formCrearGrupo {
+  padding: 60px 100px;
+}
+
+#gruposBody .displayGrupos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=style.css.map */
