--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,11 @@
+/*font-family: 'Cabin', sans-serif; (textos)
+font-family: 'Montserrat', sans-serif; (negrita 1)
+font-family: 'Raleway', sans-serif (negrita 2)*/
+
 * {
     margin: 0px;
     padding: 0px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Raleway', sans-serif;
     scroll-behavior: smooth;
     box-sizing: border-box;
 }
@@ -11,7 +15,7 @@
 @import "variables";
 
 // font
-@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,400;0,500;0,800;0,900;1,800&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,400;0,500;0,800;0,900;1,800&display=swap');
 // páginas
 @import "componentes/inicio";
 @import "componentes/pasos";
